$Id: ChangeLog,v 1.49 2008/05/08 15:56:56 tho Exp $

ChangeLog file of MaKL - http://www.koanlogic.com/makl/changelog.html

MaKL xxx
	- subdir.mk template rewritten using $(eval ...) to create on-the-fly
	  recursion rules for generic target(s)
	- small refactoring of lib.mk and prog.mk templates
	- add assert-var function to test variables before use

MaKL 1.7.1
	- fix usage of toolchain variables from configure scripts 

MaKL 1.7.0
	- added new DISTRECIPE var to dist.mk template to load dist objects from
	  an external file (can be mixed with DISTFILES and DISTREMAP)
	- fix in multiple word representation of header macros
	- do linking also for cross-compilation
	- multi-valued XENO_PATCH_URI and XENO_PATCH_FILE variables in xeno.mk
	- added XENO_FETCH_MULTI_URI to xeno-fetch.mk to allow download of multiple
	  different tarballs'
	- 'makl-new dist' command produces Makefile.dist instead of Makefile

MaKL 1.6.0
	- all makl* commands also exist in makl-* fashion, which is the preferred
	  syntax from now on
	- added maklnew (makl-new) command to create Makefile's from templates
	- added .help target to all .mk to document the available variables and 
	  targets
	- makl_compile doesn't link when cross compiling
	- added makltc (makl-tc) command to ease the creation of cross compilation 
	  environment
	- makl_checkstructelem added to check a specific element in a struct
	- makl_checksymbol added to check for #defines, variables or functions
	- explicit cygwin toolchain (default.tc would fit anyway)
	- force darwin toolchain to use /bin/echo instead of shell builtin which
	  would break on darwin 9.0.0
	- makl_checkfunc fix
	- remote toolchain download URL updated
	- added TAR and TAR_ARGS variables to dist.mk

MaKL 1.5.1:
	- added makl_checkextern

MaKL 1.5.0:
	- added "nutshell"s, i.e. a mechanism to create and use completely modular
	  toolchains (via MAKL_ETC variable)
	- added RELOC variable for staged installation